# camera_lidar_calib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
config/: calib_config.yaml  camera0_camera_calib.yaml
example/lidar_camera_calib/: .gitignore  CMakeLists.txt  README.md  code-style-cpp.md  recover_distortion_main.cpp  reverse_distortion_map.cc  reverse_distortion_map.h
example/lidar_camera_calib/config/: calib_config.yaml  calib_config_standalone.yaml  recover_distortion_config.yaml
example/lidar_camera_calib/examples/: batch_calibration.cpp  simple_calibration.cpp
example/lidar_camera_calib/include/: calib_core.h  cli.h  config_manager.h  lidar_detector.h  qr_detector.h  undistortion_preprocessor.h  visualizer.h
example/lidar_camera_calib/include/dataset_loader/: dataset_loader.h  dataset_structure.h
example/lidar_camera_calib/include/pcd_merger/: merged_point_cloud.h  pcd_merger.h
example/lidar_camera_calib/include/video_extractor/: video_extractor.h  video_types.h
example/lidar_camera_calib/src/: QWEN.md  calib_core.cpp  config_manager.cpp  data_loader.cpp  exception_handler.cpp  logger.cpp  main_standalone.cpp  qr_detector.cpp  result_exporter.cpp  visualizer.cpp
example/lidar_camera_calib/src/dataset_loader/: CMakeLists.txt  dataset_loader.cpp  dataset_structure.cpp
example/lidar_camera_calib/src/pcd_merger/: CMakeLists.txt  merged_point_cloud.cpp  pcd_merger.cpp
example/lidar_camera_calib/src/video_extractor/: CMakeLists.txt  video_extractor.cpp  video_types.cpp
include/: color.h  common_lib.h  config_manager.h  data_loader.h  exception_handler.h  logger.h  qr_detector.h  result_exporter.h
scripts/: generate_test_data.py
src/: cli.cpp  common_lib.cpp  config_manager.cpp  data_loader.cpp  lidar_detector.cpp  logger.cpp  main.cpp  qr_detector.cpp  undistortion_preprocessor.cpp
